--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="scene_one_info">OnSwipe transition attached to rectangle. You can drag it up and down or release, then object will position nicely at start or end constraint depends on release position</string>
+    <string name="scene_one_title">Scene 1</string>
 </resources>
