--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="sceneEightInfo">This scene shows swipe effect. We have two transitions here - like/dislike and three slightly different constraintSet - rest, like and dislike</string>
     <string name="sceneNineTitle">Scene 9</string>
     <string name="sceneNineInfo">This scene is similar to scene eight, but upon swipe left/right the view fly off the screen. This is possibly using another constraintSet and auto transitions.</string>
+    <string name="scene10Title">Scene 10(square reveal)</string>
+    <string name="scene10Info">This scene have very simple animation, but what is important is that at the end of animation it opens second fragment. Check the Scene10Fragment.class to see how to implement TransitionListener</string>
 </resources>
